<resources>
    <string name="app_name">Zieke App</string>
    <string name="hello_world">Hey you! Tap me if you dare.</string>
    <string name="tapMe">Tap me!</string>
    <string name="Eatr">Eatr.</string>

    <string name="title_activity_landing">Landing</string>
    <string name="landingButtonEnter">Enter</string>
    <string name="title_activity_login">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup_call_to_action">No account yet? Create one</string>

    <!-- Strings related to navigation menu-->
    <string name="menu_browse">Browse</string>
    <string name="menu_recipies">My Recipies</string>
    <string name="menu_week">My Week</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_feedback">Feedback</string>

</resources>
